[package]
name = "poost"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
uuid = { version = "1.7", features = ["v4", "serde"] }
sysinfo = "0.30"
hex = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
wgpu = { version = "25" }
once_cell = "1.21.3"

[dev-dependencies]
rand = "0.8"
http-body-util = "0.1"
