[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
reth-stateless = { git = "https://github.com/kevaundray/reth", rev = "2da36a83250abbe9ebad72a6146b236a8f8b3bb6" }
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0.98"
dotenvy = "0.15"

reth = { git = "https://github.com/kevaundray/reth", rev = "2da36a83250abbe9ebad72a6146b236a8f8b3bb6" }
alloy-consensus = { version = "1.0.5", default-features = false, features = [
    "serde",
] }
